# pomodoro

./: .gitignore  Makefile  alembic.ini  dependency.py  docker-compose.yml  exception.py  gunicorn.conf.py  main.py  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: 0079b4a7022f_yandex_access_token.py  2638717aab62_init.py  27ac38030505_user_init.py  606c39073d3c_extend_user_profile.py  98b1110dae5c_add_data.py  b39c9f61a6b1_access_token_nullable_2.py  eaf888091813_ref_user_profile.py
app/: __init__.py  dependency.py  main.py
app/infrastructure/cache/: accessor.py
app/infrastructure/database/: __init__.py  accessor.py
app/tasks/: handlers.py  models.py  schema.py  service.py
app/tasks/repository/: __init__.py  cache_task.py  task.py
app/users/auth/: handlers.py  schema.py  service.py
app/users/user_profile/: handlers.py  models.py  repository.py  service.py
cache/: __init__.py  accessor.py
client/: __init__.py  google.py  yandex.py
database/: __init__.py  database.py  models.py
handlers/: __init__.py  auth.py  ping.py  tasks.py  user.py
models/: __init__.py  tasks.py  user.py
repository/: __init__.py  cache_task.py  task.py  user.py
schema/: __init__.py  auth.py  task.py
service/: __init__.py  auth.py  task.py  user.py
tests/: conftest.py
tests/fixtures/auth/: auth_service.py  clients.py
tests/fixtures/tasks/: tasks_model.py  tasks_service.py
tests/fixtures/users/: user_model.py  user_repository.py  user_service.py
tests/unit/auth/: test_auth_service.py
tests/unit/tasks/: test_task_service.py
(+6 files in other folders)
