[tool.poetry]
name = "pomodoro-time"
version = "0.1.0"
description = ""
authors = ["Pavel Tarakanov <pavel191094@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.1"
uvicorn = "^0.30.6"
pydantic = "^2.9.1"
pydantic-settings = "^2.5.2"
sqlalchemy = "^2.0.34"
alembic = "^1.13.2"
psycopg2-binary = "^2.9.9"
redis = "^5.0.8"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
